--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
-body {
-    margin: 0;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+
+body, html, #root, .app {
+    height: 100%;
+	 width: 100%;
+	 font-family: "Inter", sans-serif;
+	 background-color: #1f2026;
 }
